--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "cypress": "^13.14.1"
+    "cypress": "^13.14.1",
+    "cypress-iframe": "^1.0.1"
   }
 }
