--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx cypress run",
+    "headTest" : "npx cypress run --headed",
+    "chromeTest":"npx run test --browser chrome",
+    "recordDashboard": "npx cypress run --record",
+    "allTests":"npx cypress run --spec \"cypress/integration/examples/*.js\"",
+    "singleTest": "npx cypress run --spec \"cypress/integration/examples/TestFramework.js\""
   },
   "author": "",
   "license": "ISC",
