--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "main": "index.js",
   "scripts": {
     "test": "npx cypress run",
-    "headTest" : "npx cypress run --headed",
-    "chromeTest":"npx run test --browser chrome",
+    "headTest": "npx cypress run --headed",
+    "chromeTest": "npx run test --browser chrome",
     "recordDashboard": "npx cypress run --record",
-    "allTests":"npx cypress run --spec \"cypress/integration/examples/*.js\"",
+    "allTests": "npx cypress run --spec \"cypress/integration/examples/*.js\"",
     "singleTest": "npx cypress run --spec \"cypress/integration/examples/TestFramework.js\""
+  },
+  "cypress-cucumber-preprocessor": {
+    "json": {
+      "enabled": true,
+      "output": "cypress/cucumberReports/resulsts.json"
+    }
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +22,11 @@
   "devDependencies": {
     "cypress": "^13.14.1",
     "cypress-iframe": "^1.0.1",
-    "cypress-mochawesome-reporter": "^3.8.2"
+    "cypress-mochawesome-reporter": "^3.8.2",
+    "multiple-cucumber-html-reporter": "^3.8.0"
+  },
+  "dependencies": {
+    "@badeball/cypress-cucumber-preprocessor": "^21.0.2",
+    "@cypress/browserify-preprocessor": "^3.0.2"
   }
 }
