--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "cypress": "^13.14.1",
+    "cypress": "^13.15.2",
     "cypress-iframe": "^1.0.1",
     "cypress-mochawesome-reporter": "^3.8.2",
     "multiple-cucumber-html-reporter": "^3.8.0"
   },
   "dependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^21.0.2",
-    "@cypress/browserify-preprocessor": "^3.0.2"
+    "@cypress/browserify-preprocessor": "^3.0.2",
+    "csv-parse": "^5.5.6",
+    "neat-csv": "^7.0.0"
   }
 }
